--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                 </ol>
             </aside>
         </section>
+        <section class="cookie">
+            Cookie statement
+        </section>
         <footer>
             <p>
                 &copy; 2022 | Anthony Shoshi Gomes
