--- a/index.html
+++ b/index.html
@@ -2,44 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">    
-    <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
-    <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
-    <meta name="author" content="Anthony Shoshi Gomes">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learning</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title>Anthonian Sportswear</title>
 </head>
 
 <body>
+    <header>
+        <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        <h1>Anthonian Sportswear</h1>
+        <h2>Innovation has a meaning!</h2>
+    </header>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="hamburgerBtn">
+            <img src="./img/hamburger-img.svg" alt="hamburger image" title="hamburger image">
+        </label>
+        <ul>
+            <li>
+                <a href="">Products</a>
+            </li>
+            <li>
+                <a href="">Pricing</a>
+            </li>
+            <li>
+                <a href="">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <main>
-        <header>
-            <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
-            <h1>Anthonian Sportswear</h1>
-            <h2>Innovation has a meaning!</h2>
-        </header>
-        <nav>
-            <a href="index.html">
-                <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
-            </a>
-            <input type="checkbox" id="check">
-            <label for="check" class="hamburgerBtn">
-                <img src="./img/hamburger-img.svg" alt="hamburger image" title="hamburger image">
-            </label>
-            <ul>
-                <li>
-                    <a href="">Products</a>
-                </li>
-                <li>
-                    <a href="">Pricing</a>
-                </li>
-                <li>
-                    <a href="">Contact</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="promo-movie">
+            <video autoplay>
+                <source src="./video/promo-pc.mp4" type="video/mp4">
+                <source src="./video/promo-audio.ogg" type="video/ogg">
+                Your browser does not support HTML5 video.
+            </video>
+        </section>
         <section class="container">
-            <section class="articles">
-                <section>
+            <section class="row">
+                <section class="articles">
                     <article>
                         <h2>Wearable Sports Tracking Devices </h2>
                         <a href="https://www.inholland.nl/" target="_blank">
@@ -77,14 +81,11 @@
                             December 25 <span class="dot"></span> 5 min read <span class="dot"></span>
                             <a href="https://simplifaster.com/articles/athlete-tracking-systems/" target="_blank">More
                                 Info</a>
-                        </footer>
+                        </footer>                        
                     </article>
-                </section>
-                <section>
                     <article>
                         <h2>Augmented Reality for Better Game Analysis </h2>
-                        <a href="https://www.inholland.nl/"
-                            target="_blank">
+                        <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/argmented-reality.png" alt="Argmented Reality" title="Argmented Reality">
                         </a>
                         <p>
@@ -119,12 +120,9 @@
                                 Info</a>
                         </footer>
                     </article>
-                </section>
-                <section>
                     <article>
                         <h2>Wearable HD Cameras For Enhanced Viewing Experience </h2>
-                        <a href="https://www.inholland.nl/"
-                            target="_blank">
+                        <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/waerable-camera.jpg" alt="Wearable HD Camera on jersey"
                                 title="Wearable HD Camera">
                         </a>
@@ -164,22 +162,22 @@
                         </footer>
                     </article>
                 </section>
+                <aside>
+                    <h2>5 upcoming routes</h2>
+                    <ol>
+                        <li>Route Route Route Route Route Route Route Route Route Route Route Route</li>
+                        <li>Route 2</li>
+                        <li>Route 3</li>
+                        <li>Route 4</li>
+                        <li>Route 5</li>
+                    </ol>
+                </aside>
             </section>
-            <aside>
-                <h2>5 upcoming routes</h2>
-                <ol>
-                    <li>Route Route Route Route Route Route Route Route Route Route Route Route</li>
-                    <li>Route 2</li>
-                    <li>Route 3</li>
-                    <li>Route 4</li>
-                    <li>Route 5</li>
-                </ol>
-            </aside>
         </section>
         <section class="cookie">
             Cookie statement
         </section>
-        <footer>
+        <footer class="footer">
             <p>
                 &copy; 2022 | Anthony Shoshi Gomes
             </p>
