contact page design completed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning</title>
+    <title>Anthonian Sportswear</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
@@ -23,13 +23,16 @@
         </label>
         <ul>
             <li>
+                <a href="index.html" class="active">Home</a>
+            </li>
+            <li>
                 <a href="">Products</a>
             </li>
             <li>
                 <a href="">Pricing</a>
             </li>
             <li>
-                <a href="">Contact</a>
+                <a href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
@@ -41,7 +44,7 @@
                 Your browser does not support HTML5 video.
             </video>
         </section>
-        <section class="container">
+        <section class="column">
             <section class="row">
                 <section class="articles">
                     <article>
@@ -81,7 +84,7 @@
                             December 25 <span class="dot"></span> 5 min read <span class="dot"></span>
                             <a href="https://simplifaster.com/articles/athlete-tracking-systems/" target="_blank">More
                                 Info</a>
-                        </footer>                        
+                        </footer>
                     </article>
                     <article>
                         <h2>Augmented Reality for Better Game Analysis </h2>
