pricing page completed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="">Products</a>
             </li>
             <li>
-                <a href="">Pricing</a>
+                <a href="pricing.html">Pricing</a>
             </li>
             <li>
                 <a href="contact.html">Contact</a>
@@ -165,7 +165,7 @@
                         </footer>
                     </article>
                 </section>
-                <aside>
+                <aside id="upcoming-routes">
                     <h2>5 upcoming routes</h2>
                     <ol>
                         <li>Route Route Route Route Route Route Route Route Route Route Route Route</li>
