--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <a href="">Products</a>
             </li>
             <li>
-                <a href="">Pricing</a>
+                <a href="pricing.html">Pricing</a>
             </li>
             <li>
                 <a href="contact.html" class="active">Contact</a>
