product page desktop

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
+    <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
+    <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
@@ -26,7 +27,7 @@
                 <a href="index.html" class="active">Home</a>
             </li>
             <li>
-                <a href="">Products</a>
+                <a href="product.html">Product</a>
             </li>
             <li>
                 <a href="pricing.html">Pricing</a>
