product page mobile and tab version

--- a/product.html
+++ b/product.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
     <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
     <meta name="author" content="Anthony Shoshi Gomes">
@@ -40,7 +41,7 @@
     <main id="product-page">
         <section class="column">
             <section id="article-container">
-                <article>
+                <article style="background-color: rgb(110, 241, 138);">
                     <h2>Problem Solve</h2>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
@@ -50,7 +51,7 @@
                         deleniti natus enim est ipsam.
                     </p>
                 </article>
-                <article>
+                <article style="background-color: rgb(98, 173, 223);">
                     <h2>Global story</h2>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
@@ -60,7 +61,7 @@
                         deleniti natus enim est ipsam.
                     </p>
                 </article>
-                <article>
+                <article style="background-color: rgb(216, 56, 56);">
                     <h2>Purpose</h2>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
@@ -70,7 +71,7 @@
                         deleniti natus enim est ipsam.
                     </p>
                 </article>
-                <article>
+                <article style="background-color: rgb(224, 217, 217);">
                     <h2>expect from the service</h2>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
@@ -80,7 +81,7 @@
                         deleniti natus enim est ipsam.
                     </p>
                 </article>
-                <article>
+                <article style="background-color: rgb(184, 43, 149);">
                     <h2>Celebrities</h2>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
@@ -90,7 +91,7 @@
                         deleniti natus enim est ipsam.
                     </p>
                 </article>
-                <article>
+                <article style="background-color: rgb(219, 164, 81);">
                     <h2>Future from this innovation</h2>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
