--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
     <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
     <meta name="author" content="Anthony Shoshi Gomes">
@@ -50,10 +51,13 @@
                 <section class="articles">
                     <article>
                         <h2>Wearable Sports Tracking Devices </h2>
-                        <a href="https://www.inholland.nl/" target="_blank">
-                            <img src="./img/tracking-device.jpg" alt="Tracking Device"
-                                title="Tracking Device for Athletes">
-                        </a>
+                        <figure>
+                            <a href="https://www.inholland.nl/" target="_blank">
+                                <img src="./img/tracking-device.jpg" alt="Tracking Device"
+                                    title="Tracking Device for Athletes">
+                            </a>
+                            <figcaption>&copy; Simpli Faster</figcaption>
+                        </figure>
                         <p>
                             If you’ve ever wondered how professional athletes train to stay in such great shape, you’ll
                             know
@@ -89,9 +93,12 @@
                     </article>
                     <article>
                         <h2>Augmented Reality for Better Game Analysis </h2>
-                        <a href="https://www.inholland.nl/" target="_blank">
-                            <img src="./img/argmented-reality.png" alt="Argmented Reality" title="Argmented Reality">
-                        </a>
+                        <figure>
+                            <a href="https://www.inholland.nl/" target="_blank">
+                                <img src="./img/argmented-reality.png" alt="Argmented Reality" title="Argmented Reality">
+                            </a>
+                            <figcaption>&copy; Analytics Insight</figcaption>
+                        </figure>
                         <p>
                             Have you ever watched a sports game and been confused by the jargon being thrown around by
                             the
@@ -126,10 +133,13 @@
                     </article>
                     <article>
                         <h2>Wearable HD Cameras For Enhanced Viewing Experience </h2>
-                        <a href="https://www.inholland.nl/" target="_blank">
-                            <img src="./img/waerable-camera.jpg" alt="Wearable HD Camera on jersey"
-                                title="Wearable HD Camera">
-                        </a>
+                        <figure>
+                            <a href="https://www.inholland.nl/" target="_blank">
+                                <img src="./img/waerable-camera.jpg" alt="Wearable HD Camera on jersey"
+                                    title="Wearable HD Camera">
+                            </a>
+                            <figcaption>&copy; Technabob</figcaption>
+                        </figure>
                         <p>
                             For the sports fans out there, this one’s for you. Ever wanted a better view of your
                             favorite
