--- a/pricing.html
+++ b/pricing.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
     <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
     <meta name="author" content="Anthony Shoshi Gomes">
