fixed product page mobile device issue

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
 
 <body>
     <header>
-        <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        <a href="index.html">
+            <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        </a>
         <h1>Anthonian Sportswear</h1>
         <h2>Innovation has a meaning!</h2>
     </header>
