--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <header>
-        <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        <a href="index.html">
+            <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        </a>
         <h1>Anthonian Sportswear</h1>
         <h2>Innovation has a meaning!</h2>
     </header>
@@ -59,31 +61,33 @@
                             <figcaption>&copy; Simpli Faster</figcaption>
                         </figure>
                         <p>
-                            If you’ve ever wondered how professional athletes train to stay in such great shape, you’ll
+                            Still, you ’ll
+                            If you ’ve ever wondered how professional athletes train to stay in similar great shape.
                             know
                             that
                             the
-                            training process is gruelling and intense. From hours of cardio a day to a strict diet,
+                            training process is challenging and violent. From hours of cardio a day to a strict diet,
                             these
-                            superstars
+                            stars
                             are
-                            dedicated to their craft. Now, sports tech has developed innovative tracking devices that
+                            Devoted to their craft. Now, sports tech has developed innovative shadowing bias that
                             let
                             you
                             keep
                             track
-                            of your progress and nutrition, even when you’re not in the gym. From smart scales that
+                            of your progress and nutrition, indeed when you ’re not in the spa. From smart scales that
                             measure
                             your
-                            progress to smart clothing that can track your heart rate, these wearable tracking devices
+                            progress to smart apparel that can track your heart rate, these wearable shadowing bias
                             are
-                            revolutionizing the way we train and monitor our progress. These tracking devices can be
+                            revolutionizing the way we train and cover our progress. These shadowing bias can be
                             particularly
-                            helpful to athletes who like to train outside, such as swimmers and runners. Many of these
-                            devices
+                            helpful to athletes who like to train outdoors, similar as insensibility and runners.
+                            numerous of these
+                            bias
                             can
                             be
-                            synced with your smartphone to provide you with real-time data while you train.
+                            synced with your smartphone to give you with real- time data while you train.
                         </p>
                         <footer>
                             December 25 <span class="dot"></span> 5 min read <span class="dot"></span>
@@ -95,34 +99,35 @@
                         <h2>Augmented Reality for Better Game Analysis </h2>
                         <figure>
                             <a href="https://www.inholland.nl/" target="_blank">
-                                <img src="./img/argmented-reality.png" alt="Argmented Reality" title="Argmented Reality">
+                                <img src="./img/argmented-reality.png" alt="Argmented Reality"
+                                    title="Argmented Reality">
                             </a>
                             <figcaption>&copy; Analytics Insight</figcaption>
                         </figure>
                         <p>
-                            Have you ever watched a sports game and been confused by the jargon being thrown around by
+                            Have you ever watched a sports game and been confused by the slang being thrown around by
                             the
-                            commentators? If so, you’re definitely not alone. Many sports fans don’t understand the
-                            jargon
+                            observers? If so, you ’re surely not alone. numerous sports suckers do n’t understand the
+                            slang
                             used
                             by
-                            sports commentators and analysts during live game broadcasts. Now, sports tech has developed
-                            augmented
-                            reality tools that let you see statistics and graphics pop up on your screen while you’re
+                            sports observers and judges during live game broadcasts. Now, sports tech has developed
+                            stoked
+                            reality tools that let you see statistics and plates pop up on your screen while you ’re
                             watching a
-                            game. These augmented reality innovations can help you understand what’s happening on the
+                            game. These stoked reality inventions can help you understand what’s passing on the
                             field
                             and
                             let
-                            you see things from a different perspective. These augmented reality tools are particularly
+                            you see effects from a different perspective. These stoked reality tools are particularly
                             helpful
                             for
-                            sports commentators who have access to all the statistics and data they need at their
+                            sports observers who have access to all the statistics and data they need at their
                             fingertips.
                             These
-                            tools let commentators provide viewers with more detailed analysis and help them better
+                            tools let Observers give observers with more detailed analysis and help them better
                             understand
-                            what’s happening on the field.
+                            what’s passing on the field.
                         </p>
                         <footer>
                             October 13 <span class="dot"></span> 12 min read <span class="dot"></span>
@@ -141,28 +146,28 @@
                             <figcaption>&copy; Technabob</figcaption>
                         </figure>
                         <p>
-                            For the sports fans out there, this one’s for you. Ever wanted a better view of your
+                            For the sports suckers out there, this bone ’s for you. Ever wanted a better view of your
                             favorite
                             athlete’s
                             live performance? Or wished you could relive the excitement of a live play in full HD? Well,
                             sports
                             tech
-                            has now developed wearable cameras that let you do exactly that. One of the most interesting
-                            innovations
-                            in sports tech is the live-broadcasting camera. These wearable cameras let you stream a
-                            first-person
-                            view of the sporting event, allowing you to see exactly what the athlete sees while they’re
+                            has now developed wearable cameras that let you do exactly that. One of the most intriguing
+                            inventions
+                            in sports tech is the live- broadcasting camera. These wearable cameras let you stream a
+                            first- person
+                            view of the sporting event, allowing you to see exactly what the athlete sees while they ’re
                             performing.
                             These cameras have been used in a variety of sporting events. From extreme sports to the
-                            latest
-                            game-changing innovations in the world of football, these wearable cameras are changing the
+                            rearmost
+                            game- changing inventions in the world of football, these wearable cameras are changing the
                             way
                             we
                             watch
-                            games forever. Not only does this allow you to get an up-close view of the action, but it
+                            games ever. Not only does this allow you to get an over-close view of the action, but it
                             also
                             enables
-                            you to see things from the athlete’s perspective. This can help you better understand
+                            you to see effects from the athlete’s perspective. This can help you more understand
                             complex
                             plays
                             and
