--- a/product.html
+++ b/product.html
@@ -14,7 +14,9 @@
 
 <body>
     <header>
-        <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        <a href="index.html">
+            <img class="logo" src="./img/logo.png" alt="website logo" title="Anthonian Sportswear">
+        </a>
         <h1>Anthonian Sportswear</h1>
         <h2>Innovation has a meaning!</h2>
     </header>
@@ -44,61 +46,118 @@
                 <article style="background-color: rgb(110, 241, 138);">
                     <h2>Problem Solve</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
-                        commodi
-                        repellendus soluta porro? Laboriosam quasi sapiente officiis? Tempore et, magni quibusdam
-                        tenetur
-                        deleniti natus enim est ipsam.
+                        One pretty big advantage of a sensor integrated into the ball or jersey actually definitely is
+                        the data quality in a subtle way. This really is because there basically really are no
+                        disruptive factors that really affect the optical tracking with the sensor in a very big way. A
+                        definitely very second advantage definitely specifically is a latency of only 20 ms — which
+                        actually literally means for all intents and purposes definitely human eye: real-time.
                     </p>
                 </article>
                 <article style="background-color: rgb(98, 173, 223);">
                     <h2>Global story</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
-                        commodi
-                        repellendus soluta porro? Laboriosam quasi sapiente officiis? Tempore et, magni quibusdam
-                        tenetur
-                        deleniti natus enim est ipsam.
+                        Wearable Sports Tracking Devices for all intents and purposes is the only tracking provider to
+                        offer sensor technology that can essentially be integrated into definitely official football or
+                        jersey & handball or jersey specifically match ball or jerseys as well as jerseys, which
+                        actually is quite significant. In real-time, positions and inertial data (impacts and
+                        particularly spin rate) of the ball or jersey can for all intents and purposes be detected with
+                        accuracy down to the centimeter, showing how wearable Sports Tracking Devices particularly is
+                        the only tracking provider to offer sensor technology that can basically be integrated into very
+                        official football or jersey & handball or jersey essentially match ball or jerseys as well as
+                        jerseys, very contrary to popular belief.
                     </p>
                 </article>
                 <article style="background-color: rgb(216, 56, 56);">
-                    <h2>Purpose</h2>
+                    <h2>How it works</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
-                        commodi
-                        repellendus soluta porro? Laboriosam quasi sapiente officiis? Tempore et, magni quibusdam
-                        tenetur
-                        deleniti natus enim est ipsam.
+                        Tracking match ball or jerseys requires an LPS network around the pitch, a ball or jersey sensor
+                        and real-time data transmission and processing.
+
+                        <b>Setup of Antennas</b>
+                    <p>
+                        Between an average of and 24 network antennas (aka anchors”) are permanently installed and wired
+                        around the field.
+                    </p>
+
+                    <b>A Sensor inside the Ball or jersey</b>
+                    <p>
+                        Inside the match ball or jersey, a 14 g light sensor is integrated that combines an inertial
+                        measurement unit (IMU) and an ultra-wideband sensor (UWB).
+                    </p>
+
+                    <b>Positioning with Centimeter Accuracy</b>
+                    <p>
+                        The ultra-wideband sensor (UWB) sends centimeter-accurate position data of the ball or jersey
+                        via triangulation up to 400 times per second.
+                    </p>
+
+                    <b>Real-Time Data Processing</b>
+                    <p>
+                        The data is sent to the processor via the antennas or “anchors”. Within 20ms, the processor
+                        calculates metrics such as speed, pass lengths, etc. and recognizes events such as shots,
+                        passes, touches and more.
+                    </p>
+
+
+                    <b>Automated Data Output & Visualization</b>
+                    <p>
+                        Wearable sports tracking device offers two options to use the data:
+                    </p>
+                    <p>
+                        1. The wearable sports tracking device App displays all collected information in tabular form
+                        and offers options for customization of visuals.
+                    </p>
+                    <p>
+                        2. Real-time or low-latency media interfaces allow the raw data streams (position, impact and
+                        spin rate) to be broadcasted in real-time — be it for media enhancement, AR applications,
+                        officiating or any other fully or semi-automated usecase.
+                    </p>
+
                     </p>
                 </article>
                 <article style="background-color: rgb(224, 217, 217);">
                     <h2>expect from the service</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
-                        commodi
-                        repellendus soluta porro? Laboriosam quasi sapiente officiis? Tempore et, magni quibusdam
-                        tenetur
-                        deleniti natus enim est ipsam.
+                        One big advantage of a detector integrated into the ball or jersey is the data quality. This is
+                        because there are no disruptive factors that affect the optic shadowing with the detector. An
+                        alternate advantage is a quiescence of only 20 ms — which means for the mortal eye real- time.
+                        More advantages they will get from this device:
+                    <ul>
+                        <li>Shot distribution</li>
+                        <li> Possession</li>
+                        <li> Ball speed</li>
+                        <li> Shot distance</li>
+                        <li> Team possession</li>
+                        <li> Ball possession</li>
+                        <li> Number of outplayed players and many more</li>
+                    </ul>
                     </p>
                 </article>
                 <article style="background-color: rgb(184, 43, 149);">
                     <h2>Celebrities</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
-                        commodi
-                        repellendus soluta porro? Laboriosam quasi sapiente officiis? Tempore et, magni quibusdam
-                        tenetur
-                        deleniti natus enim est ipsam.
+                        In 2022, connected football or jersey match ball or jerseys with KINEXON detector outside have
+                        been officially approved by FIFA. These are the first officially approved connected ball or
+                        jerseys for sanctioned football or jersey games. What makes this ball or jersey detector
+                        technology unique
+                        The detector combines UWB and IMU technology and is networked with a Original Positioning System
+                        around the pitch to give “through the air” raw data on position, movement and touch in real-
+                        time.
+                        The detector is integrated in an unrestricted, extremely robust unit, which protects the tackle
+                        from all external influences of the sport — without limiting functionality.
+                        This exclusive system keeps the ball or jersey detector safe and functional indeed under the
+                        rigorous FIFA conditions and norms.
                     </p>
                 </article>
                 <article style="background-color: rgb(219, 164, 81);">
                     <h2>Future from this innovation</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid perferendis natus possimus
-                        commodi
-                        repellendus soluta porro? Laboriosam quasi sapiente officiis? Tempore et, magni quibusdam
-                        tenetur
-                        deleniti natus enim est ipsam.
+                        In future, Ball data can generally mostly be used to digitize, measure, visualize and definitely
+                        actually analyze the game in real-time, which for the most part basically is fairly significant,
+                        which basically is fairly significant. Examples mostly literally include heat maps, movement
+                        patterns with and against the ball, speed measurements, and particularly generally much more,
+                        which for all intents and purposes is fairly significant in a for all intents and purposes major
+                        way.
                     </p>
                 </article>
             </section>
