fixed issues in several pages

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
-    <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
+    <meta name="description"
+        content="Anthonian Sportswear is a new sportswear shop. Here different types of sports tech item sold. Nowadays everything getting digital which also impact on the sports. Therefore, all types of latest sports devices such as wearable tracking device, wearable HD camera, sensor including ball and jersey also available here. You can check product prices from this website and also can send us message if you have any question.">
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear - Contact</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
@@ -42,6 +44,22 @@
     </nav>
     <main id="contact-page">
         <section class="column">
+            <section id="contact-info">
+                <h2>Contact Information</h2>
+                <p id="address">Address</p>
+                <p>20, Meelbeskamp, 1112 GW, Diemen</p>
+                <p id="hours">Hours</p>
+                <ul>
+                    <li>Sunday Closed</li>
+                    <li>Monday 7:30am - 10:30pm </li>
+                    <li>Tuesday 7:30am - 6:30pm</li>
+                    <li>Wednesday 7:30am - 6:30pm</li>
+                    <li>Thursday 7:30am - 10:30pm </li>
+                    <li>Friday 7:30am - 6:30pm</li>
+                    <li>Saturday Closed </li>
+                    </li>
+                </ul>
+            </section>
             <section class="row">
                 <section id="contact-form">
                     <form action="/action_page.php">
@@ -62,7 +80,7 @@
                                 <textarea name="message" rows="10" required></textarea>
                             </section>
                             <section class="column">
-                                <button type="submit">Submit</button>
+                                <input type="submit" value="Submit">
                             </section>
                         </fieldset>
                     </form>
