--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
-    <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
+    <meta name="description"
+        content="Anthonian Sportswear is a new sportswear shop. Here different types of sports tech item sold. Nowadays everything getting digital which also impact on the sports. Therefore, all types of latest sports devices such as wearable tracking device, wearable HD camera, sensor including ball and jersey also available here. You can check product prices from this website and also can send us message if you have any question.">
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
