--- a/pricing.html
+++ b/pricing.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
-    <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
+    <meta name="description"
+        content="Anthonian Sportswear is a new sportswear shop. Here different types of sports tech item sold. Nowadays everything getting digital which also impact on the sports. Therefore, all types of latest sports devices such as wearable tracking device, wearable HD camera, sensor including ball and jersey also available here. You can check product prices from this website and also can send us message if you have any question.">
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear - Pricing</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
@@ -49,7 +51,8 @@
                             <thead>
                                 <tr>
                                     <th>SL. No.</th>
-                                    <th>Product</th>
+                                    <th>Product Image</th>
+                                    <th>Product Title</th>
                                     <th>Price</th>
                                 </tr>
                             </thead>
@@ -58,46 +61,47 @@
                                     <td>
                                         1
                                     </td>
-                                    <td>
-                                        <section class="product">
-                                            <img src="./img/tracking-device.jpg" alt="Tracking Device"
-                                                title="Tracking Device for Athletes">
-                                            <span>Wearable Sports Tracking Devices</span>
-                                        </section>
+                                    <td class="td-img">
+                                        <img src="./img/tracking-device.jpg" alt="Tracking Device"
+                                            title="Tracking Device for Athletes">
                                     </td>
-                                    <td>45</td>
+                                    <td>
+                                        Wearable Sports Tracking Devices
+                                    </td>
+                                    <td>&euro; 45</td>
                                 </tr>
                                 <tr>
                                     <td>
                                         2
                                     </td>
-                                    <td>
-                                        <section class="product">
-                                            <img src="./img/argmented-reality.png" alt="Argmented Reality"
-                                                title="Argmented Reality">
-                                            <span>Augmented Reality for Better Game Analysis</span>
-                                        </section>
+                                    <td class="td-img">
+                                        <img src="./img/argmented-reality.png" alt="Argmented Reality"
+                                            title="Argmented Reality">
                                     </td>
-                                    <td>45</td>
+                                    <td>
+                                        Augmented Reality for Better Game Analysis
+                                    </td>
+                                    <td>&euro; 45</td>
                                 </tr>
                                 <tr>
                                     <td>
                                         3
                                     </td>
-                                    <td>
-                                        <section class="product">
-                                            <img src="./img/waerable-camera.jpg" alt="Wearable HD Camera on jersey"
+                                    <td class="td-img">
+                                        <img src="./img/waerable-camera.jpg" alt="Wearable HD Camera on jersey"
                                                 title="Wearable HD Camera">
-                                            <span>Wearable HD Cameras For Enhanced Viewing Experience</span>
-                                        </section>
                                     </td>
-                                    <td>45</td>
+                                    <td>
+                                        Wearable HD Cameras For Enhanced Viewing Experience
+                                    </td>
+                                    <td>&euro; 45</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th>SL. No.</th>
-                                    <th>Product</th>
+                                    <th>Product Image</th>
+                                    <th>Product Title</th>
                                     <th>Price</th>
                                 </tr>
                             </tfoot>
