--- a/product.html
+++ b/product.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="keywords" content="sports, wear, Sportswear, Anthonian, shop">
-    <meta name="description" content="Anthonian Sportswear is a new sports wear shop.">
+    <meta name="description"
+        content="Anthonian Sportswear is a new sportswear shop. Here different types of sports tech item sold. Nowadays everything getting digital which also impact on the sports. Therefore, all types of latest sports devices such as wearable tracking device, wearable HD camera, sensor including ball and jersey also available here. You can check product prices from this website and also can send us message if you have any question.">
     <meta name="author" content="Anthony Shoshi Gomes">
     <title>Anthonian Sportswear - Product</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
@@ -43,7 +45,7 @@
     <main id="product-page">
         <section class="column">
             <section id="article-container">
-                <article style="background-color: rgb(110, 241, 138);">
+                <article>
                     <h2>Problem Solve</h2>
                     <p>
                         One pretty big advantage of a sensor integrated into the ball or jersey actually definitely is
@@ -53,7 +55,7 @@
                         actually literally means for all intents and purposes definitely human eye: real-time.
                     </p>
                 </article>
-                <article style="background-color: rgb(98, 173, 223);">
+                <article>
                     <h2>Global story</h2>
                     <p>
                         Wearable Sports Tracking Devices for all intents and purposes is the only tracking provider to
@@ -67,31 +69,31 @@
                         jerseys, very contrary to popular belief.
                     </p>
                 </article>
-                <article style="background-color: rgb(216, 56, 56);">
+                <article>
                     <h2>How it works</h2>
                     <p>
                         Tracking match ball or jerseys requires an LPS network around the pitch, a ball or jersey sensor
                         and real-time data transmission and processing.
 
-                        <b>Setup of Antennas</b>
+                        <strong>Setup of Antennas</strong>
                     <p>
                         Between an average of and 24 network antennas (aka anchors”) are permanently installed and wired
                         around the field.
                     </p>
 
-                    <b>A Sensor inside the Ball or jersey</b>
+                    <strong>A Sensor inside the Ball or jersey</strong>
                     <p>
                         Inside the match ball or jersey, a 14 g light sensor is integrated that combines an inertial
                         measurement unit (IMU) and an ultra-wideband sensor (UWB).
                     </p>
 
-                    <b>Positioning with Centimeter Accuracy</b>
+                    <strong>Positioning with Centimeter Accuracy</strong>
                     <p>
                         The ultra-wideband sensor (UWB) sends centimeter-accurate position data of the ball or jersey
                         via triangulation up to 400 times per second.
                     </p>
 
-                    <b>Real-Time Data Processing</b>
+                    <strong>Real-Time Data Processing</strong>
                     <p>
                         The data is sent to the processor via the antennas or “anchors”. Within 20ms, the processor
                         calculates metrics such as speed, pass lengths, etc. and recognizes events such as shots,
@@ -99,7 +101,7 @@
                     </p>
 
 
-                    <b>Automated Data Output & Visualization</b>
+                    <strong>Automated Data Output & Visualization</strong>
                     <p>
                         Wearable sports tracking device offers two options to use the data:
                     </p>
@@ -115,7 +117,7 @@
 
                     </p>
                 </article>
-                <article style="background-color: rgb(224, 217, 217);">
+                <article>
                     <h2>expect from the service</h2>
                     <p>
                         One big advantage of a detector integrated into the ball or jersey is the data quality. This is
@@ -133,7 +135,7 @@
                     </ul>
                     </p>
                 </article>
-                <article style="background-color: rgb(184, 43, 149);">
+                <article>
                     <h2>Celebrities</h2>
                     <p>
                         In 2022, connected football or jersey match ball or jerseys with KINEXON detector outside have
@@ -149,7 +151,7 @@
                         rigorous FIFA conditions and norms.
                     </p>
                 </article>
-                <article style="background-color: rgb(219, 164, 81);">
+                <article>
                     <h2>Future from this innovation</h2>
                     <p>
                         In future, Ball data can generally mostly be used to digitize, measure, visualize and definitely
