--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
         </section>
         <footer class="footer">
             <p>
-                &copy; 2022 | Anthony Shoshi Gomes
+                &copy; 2022 | Anthony Shoshi Gomes | All Rights Reserved &reg;
             </p>
         </footer>
     </main>
