--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <img src="./img/tracking-device.jpg" alt="Tracking Device"
                                     title="Tracking Device for Athletes">
                             </a>
-                            <figcaption>&copy; Simpli Faster</figcaption>
+                            <figcaption>&copy; Simpli Faster &trade;</figcaption>
                         </figure>
                         <p>
                             Still, you ’ll
@@ -104,7 +104,7 @@
                                 <img src="./img/argmented-reality.png" alt="Argmented Reality"
                                     title="Argmented Reality">
                             </a>
-                            <figcaption>&copy; Analytics Insight</figcaption>
+                            <figcaption>&copy; Analytics Insight &trade;</figcaption>
                         </figure>
                         <p>
                             Have you ever watched a sports game and been confused by the slang being thrown around by
@@ -145,7 +145,7 @@
                                 <img src="./img/waerable-camera.jpg" alt="Wearable HD Camera on jersey"
                                     title="Wearable HD Camera">
                             </a>
-                            <figcaption>&copy; Technabob</figcaption>
+                            <figcaption>&copy; Technabob &trade;</figcaption>
                         </figure>
                         <p>
                             For the sports suckers out there, this bone ’s for you. Ever wanted a better view of your
@@ -200,7 +200,7 @@
         </section>
         <footer class="footer">
             <p>
-                &copy; 2022 | Anthony Shoshi Gomes
+                &copy; 2022 | Anthony Shoshi Gomes | All Rights Reserved &reg;
             </p>
         </footer>
     </main>
