--- a/pricing.html
+++ b/pricing.html
@@ -51,9 +51,10 @@
                             <thead>
                                 <tr>
                                     <th>SL. No.</th>
-                                    <th>Product Image</th>
-                                    <th>Product Title</th>
-                                    <th>Price</th>
+                                    <th>Product</th>
+                                    <th>Price (&euro;)</th>
+                                    <th>Price (&pound;)</th>
+                                    <th>Price (&dollar;)</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -100,9 +101,10 @@
                             <tfoot>
                                 <tr>
                                     <th>SL. No.</th>
-                                    <th>Product Image</th>
-                                    <th>Product Title</th>
-                                    <th>Price</th>
+                                    <th>Product</th>
+                                    <th>Price (&euro;)</th>
+                                    <th>Price (&pound;)</th>
+                                    <th>Price (&dollar;)</th>
                                 </tr>
                             </tfoot>
                         </table>
@@ -137,7 +139,7 @@
         </section>
         <footer class="footer">
             <p>
-                &copy; 2022 | Anthony Shoshi Gomes
+                &copy; 2022 | Anthony Shoshi Gomes | All Rights Reserved &reg;
             </p>
         </footer>
     </main>
